Fix TrueType interpreter Bug #691227 Another nasty hack for another broken TrueType font. In this case the font tries to execute a DeltaP instruction with an argument greater than the number of points in the glyph, which is an error.

FreeType's interpreter has this comment

      /* XXX: Because some popular fonts contain some invalid DeltaP */
      /*      instructions, we simply ignore them when the stacked   */
      /*      point reference is off limit, rather than returning an */
      /*      error.  As a delta instruction doesn't change a glyph  */
      /*      in great ways, this shouldn't be a problem.            */

This patch more or less mimics this in our code.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11043 a1074d23-0009-0410-80fe-cf8c14f379e6